package com.bitworks.rtb.db.schema

/**
  * Database site IAB category entity.
  *
  * @author Egor Ilchenko
  */
case class SiteIABCategory(
    siteId: Int,
    iabCategoryId: Int)
