package com.bitworks.rtb.service.dao.schema

import com.bitworks.rtb.model.db.BaseEntity

/**
  * Database site display manager entity.
  *
  * @author Egor Ilchenko
  */
case class SiteDisplayManagerEntity(
    siteId: Int,
    displayManagerId: Int)
